--- a/Window Version/package.json
+++ b/Window Version/package.json
@@ -10,8 +10,14 @@
   "author": "Wojciech Konieczny",
   "license": "MIT",
   "dependencies": {
-    "electromon": "^1.0.10",
-    "electron": "^33.3.1",
-    "toastify-js": "^1.12.0"
+    "electromon": "^1.0.0",
+    "exec-sh": "^0.4.0",
+    "merge": "^2.1.1",
+    "sweetalert2": "^11.15.10",
+    "toastify-js": "^1.12.0",
+    "watch": "^0.13.0"
+  },
+  "devDependencies": {
+    "electron": "^33.3.1"
   }
 }
